@@ -4,6 +4,9 @@ Changelog
 2.0.1 (current dev)
 -------------------
 
+Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1, v1.2.0, v1.2.1, v1.2.2 (default)
+
+- Add support for GEO-Link API version 1.2.2 (new attribute "index")
 - Dependency updates
 
 2.0.0
